--- a/ml/cc/exercises/linear_regression_with_synthetic_data.ipynb
+++ b/ml/cc/exercises/linear_regression_with_synthetic_data.ipynb
@@ -83,6 +83,7 @@
       "outputs": [],
       "source": [
         "import pandas as pd\n",
+        "import numpy as np\n",
         "import tensorflow as tf\n",
         "from matplotlib import pyplot as plt\n"
       ]
@@ -122,13 +123,13 @@
         "  # Describe the topography of the model.\n",
         "  # The topography of a simple linear regression model\n",
         "  # is a single node in a single layer. \n",
-        "  model.add(tf.keras.layers.Dense(units=1, \n",
-        "                                  input_shape=(1,)))\n",
+        "  model.add(tf.keras.Input(shape=(1,)))\n",
+        "  model.add(tf.keras.layers.Dense(units=1))\n",
         "\n",
         "  # Compile the model topography into code that \n",
         "  # TensorFlow can efficiently execute. Configure \n",
         "  # training to minimize the model's mean squared error. \n",
-        "  model.compile(optimizer=tf.keras.optimizers.experimental.RMSprop(learning_rate=my_learning_rate),\n",
+        "  model.compile(optimizer=tf.keras.optimizers.RMSprop(learning_rate=my_learning_rate),\n",
         "                loss=\"mean_squared_error\",\n",
         "                metrics=[tf.keras.metrics.RootMeanSquaredError()])\n",
         "\n",
@@ -248,8 +249,8 @@
       },
       "outputs": [],
       "source": [
-        "my_feature = ([1.0, 2.0,  3.0,  4.0,  5.0,  6.0,  7.0,  8.0,  9.0, 10.0, 11.0, 12.0])\n",
-        "my_label   = ([5.0, 8.8,  9.6, 14.2, 18.8, 19.5, 21.4, 26.8, 28.9, 32.0, 33.8, 38.2])"
+        "my_feature = np.array([1.0, 2.0,  3.0,  4.0,  5.0,  6.0,  7.0,  8.0,  9.0, 10.0, 11.0, 12.0])\n",
+        "my_label   = np.array([5.0, 8.8,  9.6, 14.2, 18.8, 19.5, 21.4, 26.8, 28.9, 32.0, 33.8, 38.2])"
       ]
     },
     {
@@ -383,7 +384,7 @@
       "outputs": [],
       "source": [
         "# Increase the learning rate and decrease the number of epochs.\n",
-        "learning_rate=100 \n",
+        "learning_rate=100.0 \n",
         "epochs=500 \n",
         "\n",
         "my_model = build_model(learning_rate)\n",
