fix(mlcc-validation): include the dataset

--- a/ml/cc/exercises/validation_and_test_sets.ipynb
+++ b/ml/cc/exercises/validation_and_test_sets.ipynb
@@ -154,17 +154,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "zUnTc_wfd_o3",
         "colab_type": "code",
         "colab": {}
       },
+      "outputs": [],
       "source": [
-        "train_df = pd.read_csv(\"https://download.mlcc.google.com/mledu-datasets/california_housing_train.csv\")\n",
-        "test_df = pd.read_csv(\"https://download.mlcc.google.com/mledu-datasets/california_housing_test.csv\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "train_df = pd.read_csv(\"california_housing_train.csv\")\n",
+        "test_df = pd.read_csv(\"california_housing_test.csv\")"
+      ]
     },
     {
       "cell_type": "markdown",
