fix(mlcc-validation): remove deprecated usages in latest version of `tensorflow`

--- a/ml/cc/exercises/validation_and_test_sets.ipynb
+++ b/ml/cc/exercises/validation_and_test_sets.ipynb
@@ -231,11 +231,12 @@
         "  model = tf.keras.models.Sequential()\n",
         "\n",
         "  # Add one linear layer to the model to yield a simple linear regressor.\n",
-        "  model.add(tf.keras.layers.Dense(units=1, input_shape=(1,)))\n",
+        "  model.add(tf.keras.Input(shape=(1,)))\n",
+        "  model.add(tf.keras.layers.Dense(units=1))\n",
         "\n",
         "  # Compile the model topography into code that TensorFlow can efficiently\n",
         "  # execute. Configure training to minimize the model's mean squared error. \n",
-        "  model.compile(optimizer=tf.keras.optimizers.experimental.RMSprop(learning_rate=my_learning_rate),\n",
+        "  model.compile(optimizer=tf.keras.optimizers.RMSprop(learning_rate=my_learning_rate),\n",
         "                loss=\"mean_squared_error\",\n",
         "                metrics=[tf.keras.metrics.RootMeanSquaredError()])\n",
         "\n",
