fix(mlcc-representation): fit codes to the latest version of `tensorflow`

--- a/ml/cc/exercises/representation_with_a_feature_cross.ipynb
+++ b/ml/cc/exercises/representation_with_a_feature_cross.ipynb
@@ -133,8 +133,8 @@
       "outputs": [],
       "source": [
         "# Load the dataset\n",
-        "train_df = pd.read_csv(\"https://download.mlcc.google.com/mledu-datasets/california_housing_train.csv\")\n",
-        "test_df = pd.read_csv(\"https://download.mlcc.google.com/mledu-datasets/california_housing_test.csv\")\n",
+        "train_df = pd.read_csv(\"california_housing_train.csv\")\n",
+        "test_df = pd.read_csv(\"california_housing_test.csv\")\n",
         "\n",
         "# Scale the labels\n",
         "scale_factor = 1000.0\n",
@@ -213,8 +213,7 @@
         "  model = tf.keras.Model(inputs=my_inputs, outputs=my_outputs)\n",
         "\n",
         "  # Construct the layers into a model that TensorFlow can execute.\n",
-        "  model.compile(optimizer=tf.keras.optimizers.experimental.RMSprop(\n",
-        "      learning_rate=my_learning_rate),\n",
+        "  model.compile(optimizer=tf.keras.optimizers.RMSprop(learning_rate=my_learning_rate),\n",
         "      loss=\"mean_squared_error\",\n",
         "      metrics=[tf.keras.metrics.RootMeanSquaredError()])\n",
         "\n",
@@ -282,13 +281,11 @@
         "\n",
         "# The two Input layers are concatenated so they can be passed as a single\n",
         "# tensor to a Dense layer.\n",
-        "preprocessing_layer = tf.keras.layers.Concatenate()(inputs.values())\n",
+        "preprocessing_layer = tf.keras.layers.Concatenate()(list(inputs.values()))\n",
         "\n",
         "dense_output = layers.Dense(units=1, name='dense_layer')(preprocessing_layer)\n",
         "\n",
-        "outputs = {\n",
-        "  'dense_output': dense_output\n",
-        "}\n",
+        "outputs = dense_output\n",
         "\n",
         "# Create and compile the model's topography.\n",
         "my_model = create_model(inputs, outputs, learning_rate)\n",
@@ -416,9 +413,7 @@
         "dense_output = layers.Dense(units=1, name='dense_layer')(concatenate_layer)\n",
         "\n",
         "# Define an output dictionary we'll send to the model constructor.\n",
-        "outputs = {\n",
-        "  'dense_output': dense_output\n",
-        "}"
+        "outputs = dense_output"
       ]
     },
     {
@@ -577,9 +572,7 @@
         "dense_output = layers.Dense(units=1, name='dense_layer')(feature_cross)\n",
         "\n",
         "# Define an output dictionary we'll send to the model constructor.\n",
-        "outputs = {\n",
-        "  'dense_output': dense_output\n",
-        "}"
+        "outputs = dense_output"
       ]
     },
     {
