--- a/ml/cc/exercises/binary_classification.ipynb
+++ b/ml/cc/exercises/binary_classification.ipynb
@@ -132,8 +132,8 @@
       },
       "outputs": [],
       "source": [
-        "train_df = pd.read_csv(\"https://download.mlcc.google.com/mledu-datasets/california_housing_train.csv\")\n",
-        "test_df = pd.read_csv(\"https://download.mlcc.google.com/mledu-datasets/california_housing_test.csv\")\n",
+        "train_df = pd.read_csv(\"california_housing_train.csv\")\n",
+        "test_df = pd.read_csv(\"california_housing_test.csv\")\n",
         "train_df = train_df.reindex(np.random.permutation(train_df.index)) # shuffle the training set"
       ]
     },
@@ -331,19 +331,17 @@
         "def create_model(my_inputs, my_learning_rate, METRICS):\n",
         "  # Use a Concatenate layer to concatenate the input layers into a single tensor.\n",
         "  # as input for the Dense layer. Ex: [input_1[0][0], input_2[0][0]]\n",
-        "  concatenated_inputs = tf.keras.layers.Concatenate()(my_inputs.values())\n",
+        "  concatenated_inputs = tf.keras.layers.Concatenate()(list(my_inputs.values()))\n",
         "  dense = layers.Dense(units=1, name='dense_layer', activation=tf.sigmoid)\n",
         "  dense_output = dense(concatenated_inputs)\n",
         "  \"\"\"Create and compile a simple classification model.\"\"\"\n",
-        "  my_outputs = {\n",
-        "    'dense': dense_output,\n",
-        "  }\n",
+        "  my_outputs = dense_output\n",
         "  model = tf.keras.Model(inputs=my_inputs, outputs=my_outputs)\n",
         "\n",
         "  # Call the compile method to construct the layers into a model that\n",
         "  # TensorFlow can execute.  Notice that we're using a different loss\n",
         "  # function for classification than for regression.\n",
-        "  model.compile(optimizer=tf.keras.optimizers.experimental.RMSprop(learning_rate=my_learning_rate),\n",
+        "  model.compile(optimizer=tf.keras.optimizers.RMSprop(learning_rate=my_learning_rate),\n",
         "                loss=tf.keras.losses.BinaryCrossentropy(),\n",
         "                metrics=METRICS)\n",
         "  return model\n",
