fix(mlcc-neural_nets): add a Lambda squeeze layer after HashedCrossing to make it work, migrate to the latest version of `tensorflow`

--- a/ml/cc/exercises/intro_to_neural_nets.ipynb
+++ b/ml/cc/exercises/intro_to_neural_nets.ipynb
@@ -94,7 +94,6 @@
         "import pandas as pd\n",
         "import tensorflow as tf\n",
         "from matplotlib import pyplot as plt\n",
-        "import seaborn as sns\n",
         "\n",
         "# The following lines adjust the granularity of reporting.\n",
         "pd.options.display.max_rows = 10\n",
@@ -126,9 +125,9 @@
       },
       "outputs": [],
       "source": [
-        "train_df = pd.read_csv(\"https://download.mlcc.google.com/mledu-datasets/california_housing_train.csv\")\n",
+        "train_df = pd.read_csv(\"california_housing_train.csv\")\n",
         "train_df = train_df.reindex(np.random.permutation(train_df.index)) # shuffle the examples\n",
-        "test_df = pd.read_csv(\"https://download.mlcc.google.com/mledu-datasets/california_housing_test.csv\")"
+        "test_df = pd.read_csv(\"california_housing_test.csv\")"
       ]
     },
     {
@@ -178,16 +177,18 @@
         "\n",
         "# Create a Normalization layer to normalize the median_income data.\n",
         "median_income = tf.keras.layers.Normalization(\n",
+        "    mean=train_df['median_income'].mean(),\n",
+        "    variance=train_df['median_income'].var(),\n",
         "    name='normalization_median_income',\n",
         "    axis=None)\n",
-        "median_income.adapt(train_df['median_income'])\n",
         "median_income = median_income(inputs.get('median_income'))\n",
         "\n",
         "# Create a Normalization layer to normalize the population data.\n",
         "population = tf.keras.layers.Normalization(\n",
+        "    mean=train_df['population'].mean(),\n",
+        "    variance=train_df['population'].var(),\n",
         "    name='normalization_population',\n",
         "    axis=None)\n",
-        "population.adapt(train_df['population'])\n",
         "population = population(inputs.get('population'))\n",
         "\n",
         "# Create a list of numbers representing the bucket boundaries for latitude.\n",
@@ -198,9 +199,10 @@
         "\n",
         "# Create a Normalization layer to normalize the latitude data.\n",
         "latitude = tf.keras.layers.Normalization(\n",
+        "    mean=train_df['latitude'].mean(),\n",
+        "    variance=train_df['latitude'].var(),\n",
         "    name='normalization_latitude',\n",
         "    axis=None)\n",
-        "latitude.adapt(train_df['latitude'])\n",
         "latitude = latitude(inputs.get('latitude'))\n",
         "\n",
         "# Create a Discretization layer to separate the latitude data into buckets.\n",
@@ -213,9 +215,10 @@
         "\n",
         "# Create a Normalization layer to normalize the longitude data.\n",
         "longitude = tf.keras.layers.Normalization(\n",
+        "    mean=train_df['longitude'].mean(),\n",
+        "    variance=train_df['longitude'].var(),\n",
         "    name='normalization_longitude',\n",
         "    axis=None)\n",
-        "longitude.adapt(train_df['longitude'])\n",
         "longitude = longitude(inputs.get('longitude'))\n",
         "\n",
         "# Create a Discretization layer to separate the longitude data into buckets.\n",
@@ -223,13 +226,16 @@
         "    bin_boundaries=longitude_boundaries,\n",
         "    name='discretization_longitude')(longitude)\n",
         "\n",
+        "cross_bins = len(latitude_boundaries) * len(longitude_boundaries)\n",
         "# Cross the latitude and longitude features into a single one-hot vector.\n",
         "feature_cross = tf.keras.layers.HashedCrossing(\n",
         "    # num_bins can be adjusted: Higher values improve accuracy, lower values\n",
         "    # improve performance.\n",
-        "    num_bins=len(latitude_boundaries) * len(longitude_boundaries),\n",
+        "    num_bins=cross_bins,\n",
         "    output_mode='one_hot',\n",
         "    name='cross_latitude_longitude')([latitude, longitude])\n",
+        "feature_cross = tf.keras.layers.Lambda(lambda x: tf.squeeze(x, axis=1),\n",
+        "    output_shape=(cross_bins,))(feature_cross)\n",
         "\n",
         "# Concatenate our inputs into a single tensor.\n",
         "preprocessing_layers = tf.keras.layers.Concatenate()(\n",
@@ -289,6 +295,28 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
+        "id": "avKFnYf8RMyU"
+      },
+      "outputs": [],
+      "source": [
+        "#@title Define normalized label columns\n",
+        "# Create Normalization layers to normalize the median_house_value data.\n",
+        "# Because median_house_value is our label (i.e., the target value we're\n",
+        "# predicting), these layers won't be added to our model.\n",
+        "train_median_house_value_normalized = tf.keras.layers.Normalization(axis=None)\n",
+        "train_median_house_value_normalized.adapt(\n",
+        "    np.array(train_df['median_house_value']))\n",
+        "\n",
+        "test_median_house_value_normalized = tf.keras.layers.Normalization(axis=None)\n",
+        "test_median_house_value_normalized.adapt(\n",
+        "    np.array(test_df['median_house_value']))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
         "id": "RW4Qe710LgnG"
       },
       "outputs": [],
@@ -331,28 +359,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
-        "id": "avKFnYf8RMyU"
-      },
-      "outputs": [],
-      "source": [
-        "#@title Define normalized label columns\n",
-        "# Create Normalization layers to normalize the median_house_value data.\n",
-        "# Because median_house_value is our label (i.e., the target value we're\n",
-        "# predicting), these layers won't be added to our model.\n",
-        "train_median_house_value_normalized = tf.keras.layers.Normalization(axis=None)\n",
-        "train_median_house_value_normalized.adapt(\n",
-        "    np.array(train_df['median_house_value']))\n",
-        "\n",
-        "test_median_house_value_normalized = tf.keras.layers.Normalization(axis=None)\n",
-        "test_median_house_value_normalized.adapt(\n",
-        "    np.array(test_df['median_house_value']))\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "v8JfAtFArOWq"
       },
       "outputs": [],
@@ -360,14 +366,8 @@
         "#@title Define linear regression model outputs\n",
         "def get_outputs_linear_regression():\n",
         "  # Create the Dense output layer.\n",
-        "  dense_output = tf.keras.layers.Dense(units=1,\n",
-        "                              name='dense_output')(preprocessing_layers)\n",
-        "\n",
-        "  # Define an output dictionary we'll send to the model constructor.\n",
-        "  outputs = {\n",
-        "    'dense_output': dense_output\n",
-        "  }\n",
-        "  return outputs"
+        "  return tf.keras.layers.Dense(units=1,\n",
+        "                              name='dense_output')(preprocessing_layers)"
       ]
     },
     {
@@ -456,12 +456,7 @@
         "  dense_output = tf.keras.layers.Dense(units=1,\n",
         "                              name='dense_output')(dense_output)\n",
         "\n",
-        "  # Define an output dictionary we'll send to the model constructor.\n",
-        "  outputs = {\n",
-        "    'dense_output': dense_output\n",
-        "  }\n",
-        "\n",
-        "  return outputs"
+        "  return dense_output"
       ]
     },
     {
